<resources>
    <string name="app_name" translatable="false">spacexTimes</string>
    <string name="notifications_channel" translatable="false">spacexTimes</string>
    <string name="notifications_id" translatable="false">spacex</string>
    <string name="notifications_description" translatable="false">Notify from SpaceX Times app</string>
    <string name="capsulesTitle">Капсулы</string>
    <string name="crewTitle">Экипажи</string>
    <string name="coresTitle">Ускорители</string>
    <string name="dragonsTitle">Dragon</string>
    <string name="rocketsTitle">Ракеты</string>
    <string name="launchPadsTitle">Зоны запуска</string>
    <string name="landingPadsTitle">Зоны посадки</string>
    <string name="launchesTitle">Запуски</string>
    <string name="searchTitle">Поиск по названию</string>
    <string name="aiTranslateTitle">Машинный перевод</string>
    <string name="filter_menu_item">Фильтр</string>
    <string name="sync_menu_item">Обновление</string>
    <string name="loadingText">загрузка…</string>
    <string name="preferencesTitle">Настройки</string>
    <string name="experimentalTitle">Экспериментально!</string>
    <string name="aiTranslateOffText">Машинный перевод отключен. Включение машинного перевода позволит перевести английский текст в описании, но не обязательно будет на 100% корректный! Аббревиатуры и прочие технические словечки могут быть переведены с ошибками.</string>
    <string name="aiTranslateOnText" translatable="false">Перевод осуществляется сервисом https://fasttranslator.herokuapp.com\nУ сервиса имеется ограничение на бесплатный перевод по количеству запросов и их размеру в час с одного ip.</string>
    <string name="synchronizeTitle">Синхронизация</string>
    <string name="refreshIntervalTitle">Частота синхронизации</string>
    <string name="refreshSummary">Определяет в часах интервал, по истечении которого данные будут обновляться из сети при очередном отображении.</string>
    <string name="uiTitle">Интерфейс</string>
    <string name="openNextAtStartText">Открывать на ближайшем запуске</string>
    <string name="openNextOnText">Список запусков будет всегда открываться на ближайшем запуске</string>
    <string name="openNextOffText">Список запусков будет открываться, отсортированный от новых к старым</string>
    <string name="widePaddingText">Увеличенные отступы от края экрана</string>
    <string name="widePaddingSummary">Добавляет отступы слева и справа для удобства на некоторых типах экранов</string>
    <string name="agreeText">Да</string>
    <string name="cancelText">Отмена</string>
    <string name="unknownText">неизвестно</string>
    <string name="activeText">действует</string>
    <string name="inactiveText">не действует</string>
    <string name="retiredText">на восстановлении</string>
    <string name="destroyedText">уничтожена</string>
    <string name="reuseText">"повторно "</string>
    <string name="first_flight_text">впервые полетел\n%s</string>
    <string name="first_flight_caption">Первый полет</string>
    <plurals name="reuseCountString">
        <item quantity="one">летала %d раз</item>
        <item quantity="few">летала %d раза</item>
        <item quantity="other">летала %d раз</item>
    </plurals>
    <string name="noFlightString">Не летала</string>
    <string name="waterLandCountString">\nприземлений на воду: %d</string>
    <string name="waterLandCoreCountString">\nприземлений на воду: %1$d/%2$d</string>
    <string name="groundLandCountString">\nприземлений на землю: %d</string>
    <string name="groundLandCoreCountString">\nприземлений на землю: %1$d/%2$d</string>
    <string name="capsuleTypeString" translatable="false">capsule type image</string>
    <string name="noInternetInfoString">Нет интернет-соединения!</string>
    <string name="photo_of_crew_member_description" translatable="false">Photo of crew member</string>
    <string name="agency_label_text">"Работает в "</string>
    <string name="wiki_label" translatable="false">Wiki</string>
    <string name="wiki_page_open_button" translatable="false">wiki page open</string>
    <string name="core_thumbnail_picture_description" translatable="false">Core thumbnail picture</string>
    <string name="photo_of_dragon_capsule_description" translatable="false">Photo of dragon capsule</string>
    <string name="photo_of_crew_member_image" translatable="false">Photo of crew member</string>
    <string name="read_more_string" translatable="false">read more</string>
    <string name="dragon_payload_caption">Объем запускаемого и возвращаемого груза:</string>
    <string name="dragon_size_caption">Высота, диаметр:</string>
    <string name="dragon_payload_line_string">" ⇧ %1$d т / %2$d м³ ⇩ %3$d т / %4$d м³"</string>
    <string name="dragon_size_string">"↕ %1$.1f м ⌀ %2$.1f м герметичный отсек - %3$d м³"</string>
    <string name="heat_shield_caption">"Диаметр, материал и выдерживаемая температура теплового щита:"</string>
    <string name="heat_shield_string">"⌀ %1$.2f м, %2$s, 🔥%3$d℃\n партнер разработки - %4$s"</string>
    <string name="spacecraft_characteristics_string">Характеристики корабля</string>
    <string name="crew_capacity_string">Вместимость экипажа:</string>
    <string name="list_thrusters_string">Двигатели корабля:</string>
    <string name="capsule_thruster_line1">%1$d шт (в блоке - %2$d) %3$s, тяга - %4$.1f кН, удельный импульс - %5$d с</string>
    <string name="capsule_thruster_line2">топливо: %1$s, окислитель: %2$s</string>
    <string name="preview_of_rocket_string" translatable="false">preview of rocket</string>
    <string name="patch_preview_description" translatable="false">official patch of launch</string>
    <string name="saved_image_notification">Изображение сохранено</string>
    <string name="saved_image_text_notification">Нажмите, чтобы открыть в галерее или редакторе.</string>
    <string name="saving_title_string">Сохранение</string>
    <string name="save_image_dialog_string">Скачать фото в галерею?</string>
    <string name="failed_image_save_string">Сохранение не удалось!</string>
    <string name="quarter1_string">"I четверть "</string>
    <string name="quarter2_string">"II четверть "</string>
    <string name="quarter3_string">"III четверть "</string>
    <string name="quarter4_string">"IV четверть "</string>
    <string name="half1_string">"первая половина "</string>
    <string name="half2_string">"вторая половина "</string>
    <string name="to_be_determined_string">не определена</string>
    <string name="not_early_string">"не ранее "</string>
    <string name="description_of_the_page_text" translatable="false">description of the page</string>
    <string name="missions_list_header">Участие в миссиях:</string>
    <string name="core_not_fly_text">Этот ускоритель еще не летал</string>
    <string name="historyEventsTitle">Исторические события</string>
    <string name="payloadsTitle">Полезная нагрузка</string>
    <string name="open_event_web_link">Открыть подробности</string>
    <string name="rocket_size_caption">Высота, диаметр и масса</string>
    <string name="rocket_size_string">"↕ %1$.1f м ⌀ %2$.1f м ⚖ %3$d т"</string>
    <string name="stages_count_string">ступеней</string>
    <string name="boosters_count_string">боковых ускорителей</string>
    <string name="rocket_success_rate_string">Оценка успешности ракеты</string>
    <string name="rocket_cost_launch_string">Стоимость одного запуска</string>
    <string name="rocket_engines_caption">Двигатели ракеты:</string>
    <plurals name="rocket_engines_string">
        <item quantity="one">%1$d двигатель %2$s версии %3$s</item>
        <item quantity="few">%1$d двигателя %2$s версии %3$s</item>
        <item quantity="many">%1$d двигателей %2$s версии %3$s</item>
    </plurals>
    <string name="rocket_isp_caption">Удельный импульс:</string>
    <string name="rocket_isp_string">На уровне моря: %1$d с, в вакууме: %2$d с</string>
    <string name="rocket_thrust_caption">Тяга одного двигателя:</string>
    <string name="rocket_thrust_string">На уровне моря: %1$.1f кН, в вакууме: %2$.1f кН</string>
    <string name="engine_twr_string">Тяговооруженность: %.2f кН/кг⋅G</string>
    <string name="engine_loss_string">Допускаемый отказ двигателей (шт): %d</string>
    <string name="error_title">Ошибка</string>
    <string name="landing_legs_caption">Посадочные опоры</string>
    <string name="landing_legs_str">%1$d шт (%2$s)</string>
    <string name="engines_numb_str">двигателей ступени: %1$d шт</string>
    <string name="reusable_stage_str">Возвращаемая ступень</string>
    <string name="expendable_stage_str">Расходуемая ступень</string>
    <string name="thrust_sl_caption">Тяга на уровне моря</string>
    <string name="thrust_vac_caption">Тяга в вакууме</string>
    <string name="stage_fuel_amount_str">Загрузка топлива: %1$.1f т</string>
    <string name="stage_burn_time_str">Время работы: %1$d с</string>
    <string name="first_stage_caption">Первая ступень:</string>
    <string name="second_stage_caption">Вторая ступень:</string>
    <string name="fairing_caption">Характеристики носового обтекателя:</string>
    <string name="fairing_details_str">Высота: %1$.1f м, диаметр: %2$.1f м</string>
    <string name="leo_caption">Низкая околоземная орбита</string>
    <string name="gso_caption">Геосинхронная орбита</string>
    <string name="mars_caption">к Марсу</string>
    <string name="pluto_caption">к Плутону</string>
    <string name="max_payload_caption">Максимальная полезная нагрузка:</string>
    <string name="moon_caption">к Луне</string>
    <string name="status_pad_caption">Статус зоны</string>
    <string name="underConstructionText">на реконструкции</string>
    <string name="launch_statistic_caption">Успешных запусков</string>
    <string name="statistic_text">%1$d из %2$d</string>
    <string name="details_caption">Краткое описание:</string>
    <string name="rockets_launched_caption">Стартовавшие ракеты:</string>
    <string name="pad_launches_caption">Запуски с этой зоны:</string>
    <string name="landing_statistic_caption">Успешных посадок</string>
    <string name="landing_pad_type_caption">Тип посадочной платформы</string>
    <string name="site_text">наземная</string>
    <string name="drone_text">плавучая</string>
    <string name="capsule_not_fly_text">Эта капсула еще не летала</string>
    <plurals name="assigned_core_caption">
        <item quantity="one">Назначенная ступень</item>
        <item quantity="other">Назначенные ступени</item>
    </plurals>
    <plurals name="assigned_crew_caption">
        <item quantity="one">Член экипажа</item>
        <item quantity="other">Члены экипажа</item>
    </plurals>
    <plurals name="assigned_capsules_caption">
        <item quantity="one">Назначенная капсула</item>
        <item quantity="other">Назначенные капсулы</item>
    </plurals>
    <string name="assigned_launch_pad_caption">Стартовая площадка</string>
    <string name="failures_list_caption">Неисправности миссии</string>
    <string name="failure_time_altitude_text">Время: %1$d сек, высота: %2$d км</string>
    <string name="failure_reason_text">Причина: %1$s</string>
    <string name="launch_number_caption">Запуск</string>
    <string name="static_fire_date_caption">Дата прожига</string>
    <string name="launch_date_caption">Дата запуска</string>
    <string name="launch_window_caption">Окно для запуска</string>
    <string name="zero_window_caption">мгновенное</string>
    <string name="landing_attempts_caption">Сведения о посадке:&#160;</string>
    <string name="landing_success_string">успешно (на %s)</string>
    <string name="youtube_string" translatable="false">Youtube</string>
    <string name="r_campaign_string">r/миссия</string>
    <string name="r_launch_string">r/запуск</string>
    <string name="r_media_string">r/медиа</string>
    <string name="r_recovery_string">r/восстановление</string>
    <string name="press_kit_string">анонс</string>
    <string name="article_string">статья</string>
</resources>