<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_flow"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="ru.alexmaryin.spacextimes_rx.ui.view.fragments.MainFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_showCrewMember"
            app:destination="@id/crewDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/mainFragment" />
        <action
            android:id="@+id/action_showDragonDetails"
            app:destination="@id/dragonDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/crewDetailFragment"
        android:name="ru.alexmaryin.spacextimes_rx.ui.view.fragments.CrewDetailFragment"
        android:label="@string/crewTitle">
        <argument
            android:name="crewId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/dragonDetailFragment"
        android:name="ru.alexmaryin.spacextimes_rx.ui.view.fragments.DragonDetailFragment"
        android:label="@string/dragonsTitle"
        tools:layout="@layout/dragon_detail_fragment">
        <argument
            android:name="dragonId"
            app:argType="string" />
    </fragment>
</navigation>